--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 		<h1>Odin Recipes</h1>
 		<ul>
 			<li><a href="recipes/pizza.html">Pizza</a></li>
-			<li></li>
-			<li></li>
+			<li><a href="recipes/pasta.html">Pasta</a></li>
+			<li><a href="recipes/calzone.html"></a></li>
 		</ul>
 	</body>
 </html>
