--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 		<ul>
 			<li><a href="recipes/pizza.html">Pizza</a></li>
 			<li><a href="recipes/pasta.html">Pasta</a></li>
-			<li><a href="recipes/calzone.html"></a></li>
+			<li><a href="recipes/calzone.html">Calzone</a></li>
 		</ul>
 	</body>
 </html>
